tests/NormalTests/paczka1/fuzzy1/16314584.err
Error in line 4: DBwIS0rQR0 A909 85,2
Error in line 13: DBwIS0rQR0 A800 88,2
